--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     <section class="my-experience" id="experience">
         <hr class="line">
         <h1>MY EXPERIENCES</h1>
-        <p class="p1">What i have done so far</p>
-        <hr class="line2">
+        <!-- <p class="p1">What i have done so far</p> -->
+        
 <div class="an">
     <div class="an1">
         <h2>SIL FRANCO CERAMICS</h2>
