--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <p class="p2">3. PROJECT MANAGER</p>
 
         <h2 class="t2">DATALAB</h2>
-        <P class="p2">1. INTERSHIP ON PYTHON AND R</P>
+        <P class="p2">1. INTERNSHIP ON PYTHON AND R</P>
 
         <a href="#head"> <strong>BACK TO TOP</strong></a>
 
